--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -3,6 +3,16 @@
   font-size: 1rem;
   color: #ffffff;
   padding: 1rem 1.5rem;
+  cursor: pointer;
   border: none;
   outline: none;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.container:hover {
+  background-color: #396cd1;
 }
